# common-port-check

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  requirements-dev.txt
src/: __init__.py  checker.py  models.py  ports_data.py
tests/: test_checker.py
