[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common-port-check"
version = "0.1.0"
description = "专业的Python库，用于检查端口是否是系统的常用端口"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Doiiars", email = "doiiars@qq.com"},
]
keywords = ["port", "network", "system", "check", "端口", "常用端口"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/DoiiarsX/common-port-check"
Documentation = "https://github.com/DoiiarsX/common-port-check#readme"
Repository = "https://github.com/DoiiarsX/common-port-check"
Issues = "https://github.com/DoiiarsX/common-port-check/issues"

[tool.hatchling.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "common_port_check"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
